--- a/ANN-Exercise-1.ipynb
+++ b/ANN-Exercise-1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-09T10:35:40.465251700Z",
@@ -504,15 +504,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (3616797373.py, line 19)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[10], line 19\u001b[0;36m\u001b[0m\n\u001b[0;31m    def helper_result(labels)\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1:\n",
+      "  Training Loss: 0.6534, Accuracy: 82.08%\n",
+      "  Validation Loss: 0.3114, Accuracy: 91.22%\n",
+      "Epoch 2:\n",
+      "  Training Loss: 0.2840, Accuracy: 91.77%\n",
+      "  Validation Loss: 0.2548, Accuracy: 93.03%\n",
+      "Epoch 3:\n",
+      "  Training Loss: 0.2261, Accuracy: 93.57%\n",
+      "  Validation Loss: 0.2155, Accuracy: 93.97%\n",
+      "Epoch 4:\n",
+      "  Training Loss: 0.1828, Accuracy: 94.75%\n",
+      "  Validation Loss: 0.1845, Accuracy: 94.71%\n",
+      "Epoch 5:\n",
+      "  Training Loss: 0.1526, Accuracy: 95.55%\n",
+      "  Validation Loss: 0.1654, Accuracy: 95.25%\n",
+      "Epoch 6:\n",
+      "  Training Loss: 0.1313, Accuracy: 96.20%\n",
+      "  Validation Loss: 0.1535, Accuracy: 95.46%\n",
+      "Epoch 7:\n",
+      "  Training Loss: 0.1152, Accuracy: 96.66%\n",
+      "  Validation Loss: 0.1457, Accuracy: 95.68%\n",
+      "Epoch 8:\n",
+      "  Training Loss: 0.1027, Accuracy: 97.01%\n",
+      "  Validation Loss: 0.1391, Accuracy: 95.89%\n",
+      "Epoch 9:\n",
+      "  Training Loss: 0.0922, Accuracy: 97.34%\n",
+      "  Validation Loss: 0.1338, Accuracy: 96.08%\n",
+      "Epoch 10:\n",
+      "  Training Loss: 0.0831, Accuracy: 97.58%\n",
+      "  Validation Loss: 0.1303, Accuracy: 96.32%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_4936/3818812342.py:81: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  network.load_state_dict(torch.load('best_model.pth'))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " test accuracy 0.97\n"
      ]
     }
    ],
@@ -525,62 +569,90 @@
     "    nn.ReLU(),\n",
     "    nn.Linear(64, 10)\n",
     ")\n",
-    " \n",
+    "\n",
     "optimizer = optim.Adam(network.parameters(), lr=0.005)\n",
     "loss_function = nn.CrossEntropyLoss()\n",
     "\n",
     "train_loss = []\n",
     "val_loss = []\n",
     "best_val_loss = float('inf')\n",
+    "epochs = 10\n",
     "\n",
-    "epochs = 20\n",
-    " \n",
-    "def helper_result(outputs,labels):\n",
-    "    _, predicted = torch.max(outputs.data(),1)\n",
+    "def helper_result(outputs, labels):\n",
+    "    _, predicted = torch.max(outputs, 1)  \n",
     "    total = labels.size(0)\n",
-    "    correct = (predicted == labels ).sum().item()\n",
-    "    return (correct,total)\n",
+    "    correct = (predicted == labels).sum().item()  \n",
+    "    return correct, total \n",
     "\n",
+    "def help_network_train(network, images, loss_function, labels): \n",
+    "    images = images.view(-1, 784) \n",
+    "    outputs = network(images)\n",
+    "    loss = loss_function(outputs, labels)\n",
+    "    return loss, outputs  \n",
+    "\n",
+    "# Training loop\n",
     "for epoch in range(epochs):\n",
     "    network.train()\n",
     "    running_loss = 0\n",
     "    correct = 0\n",
     "    total = 0\n",
+    "    \n",
     "    for images, labels in train_loader:\n",
-    "        images = images.view(-1, 784)\n",
-    "        outputs = network(images)\n",
-    "        loss = loss_function(outputs, labels)\n",
+    "        loss, outputs = help_network_train(network, images, loss_function, labels)\n",
+    "\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        (correct, total) += helper_result(outputs,labels)\n",
-    "   \n",
+    "\n",
+    "        running_loss += loss.item()\n",
+    "\n",
+    "    \n",
+    "        correct_inc, total_inc = helper_result(outputs, labels)\n",
+    "        correct += correct_inc\n",
+    "        total += total_inc\n",
+    "        \n",
     "    train_accuracy = correct / total\n",
     "\n",
-    "    #Validation\n",
     "    network.eval()\n",
-    "    val_loss = 0\n",
+    "    val_running_loss = 0\n",
     "    correct = 0\n",
     "    total = 0\n",
+    "    \n",
     "    with torch.no_grad():\n",
-    "        for images, labels in validation:\n",
-    "            images = images.view(-1, 784)\n",
-    "            outputs = network(images)\n",
-    "            val_loss += loss_function(outputs, labels).item()\n",
-    "           (correct, total) += helper_result(outputs,labels)\n",
-    "\n",
-    "             \n",
-    "\n",
+    "        for images, labels in validation:  \n",
+    "            loss, outputs = help_network_train(network, images, loss_function, labels)\n",
+    "            val_running_loss += loss.item()\n",
+    "            correct_inc, total_inc = helper_result(outputs, labels)\n",
+    "            correct += correct_inc\n",
+    "            total += total_inc\n",
     "\n",
     "    val_accuracy = correct / total\n",
-    "   \n",
-    "    print(f'Epoch {epoch}:')\n",
-    "    print(f'  Training Loss: {running_loss/len(train_loader):.4f}, Accuracy: {train_accuracy:.2%}')\n",
-    "    print(f'  Validation Loss: {val_loss/len(validation):.4f}, Accuracy: {val_accuracy:.2%}')\n",
-    "   \n",
-    "    if val_loss < best_val_loss:\n",
-    "        best_val_loss = val_loss\n",
-    "        torch.save(network.state_dict(), 'best_model.pth')"
+    "    \n",
+    "    print(f'Epoch {epoch + 1}:')\n",
+    "    print(f'  Training Loss: {running_loss / len(train_loader):.4f}, Accuracy: {train_accuracy:.2%}')\n",
+    "    print(f'  Validation Loss: {val_running_loss / len(validation):.4f}, Accuracy: {val_accuracy:.2%}')\n",
+    "\n",
+    "    # Save best model\n",
+    "    if val_running_loss < best_val_loss:\n",
+    "        best_val_loss = val_running_loss\n",
+    "        torch.save(network.state_dict(), 'best_model.pth')\n",
+    "    else:\n",
+    "        break\n",
+    "    \n",
+    "\n",
+    "\n",
+    "network.load_state_dict(torch.load('best_model.pth'))\n",
+    "network.eval()\n",
+    "correct =0\n",
+    "total=0\n",
+    "with torch.no_grad():\n",
+    "    for images,labels in test_loader:\n",
+    "        outputs=network(images.view(-1,784))\n",
+    "        correct_inc, total_inc = helper_result(outputs, labels)\n",
+    "        correct += correct_inc\n",
+    "        total += total_inc\n",
+    "test_acc = correct /total\n",
+    "print(f'\\n test accuracy {test_acc:.2f}')"
    ]
   },
   {
